added dockerfile and removed startup url

--- a/src/IdSvrHost/project.json
+++ b/src/IdSvrHost/project.json
@@ -43,7 +43,10 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "UI",
+      "idsvr3test.pfx",
+      "Dockerfile"
     ]
   },
 
