--- a/src/JsOidc/project.json
+++ b/src/JsOidc/project.json
@@ -47,7 +47,8 @@
       "Views",
       "Areas/**/Views",
       "appsettings.json",
-      "web.config"
+      "web.config",
+      "Dockerfile"
     ]
   },
 
