--- a/src/SampleApi/project.json
+++ b/src/SampleApi/project.json
@@ -48,7 +48,8 @@
       "Views",
       "Areas/**/Views",
       "appsettings.json",
-      "web.config"
+      "web.config",
+      "Dockerfile"
     ]
   },
 
