--- a/src/IdSvrHost/project.json
+++ b/src/IdSvrHost/project.json
@@ -45,7 +45,7 @@
       "wwwroot",
       "web.config",
       "UI",
-      "idsvr3test.pfx",
+      "idsrv3test.pfx",
       "Dockerfile"
     ]
   },
